UF-10207: Fix bad content type